--- a/MuonTraSach/MTS/templates/index.html
+++ b/MuonTraSach/MTS/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Trang chủ 123123</title>
+    <title>Trang chủ test 123123</title>
 </head>
 <body>
 Hello, World!
